fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -88,10 +88,13 @@
   scale: 1.3;
 }
 
-#header__button-group {
+#settings {
+  margin-top: 30px !important;
+}
+
+#settings .button-group {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 50px;
-  margin-top: 20px;
 }
