--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,12 @@ body {
   --font-color: white;
 }
 
+/* ? MISCELLANEOUS */
+
+section {
+  margin: 60px 0 !important;
+}
+
 hr {
   width: 100%;
   height: 20px;
@@ -96,13 +102,6 @@ p {
   margin: 25px 0;
 }
 
-/* ? CONTAINERS */
-
-section {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
 /* ? HEADER STYLE*/
 
 #header {
@@ -119,7 +118,7 @@ section {
   align-items: center;
 }
 #header li {
-  font-size: 1.2em;
+  font-size: 1.8em;
   font-family: Garfield;
   text-transform: uppercase;
   margin-right: 1.5em;
